# sealevel-attacks

./: Anchor.toml  Cargo.toml  package.json
programs/0-signer-authorization/insecure/: Cargo.toml
programs/0-signer-authorization/insecure/src/: lib.rs
programs/0-signer-authorization/recommended/: Cargo.toml
programs/0-signer-authorization/recommended/src/: lib.rs
programs/0-signer-authorization/secure/: Cargo.toml
programs/0-signer-authorization/secure/src/: lib.rs
programs/1-account-data-matching/insecure/: Cargo.toml
programs/1-account-data-matching/insecure/src/: lib.rs
programs/1-account-data-matching/recommended/: Cargo.toml
programs/1-account-data-matching/recommended/src/: lib.rs
programs/1-account-data-matching/secure/: Cargo.toml
programs/1-account-data-matching/secure/src/: lib.rs
programs/10-sysvar-address-checking/insecure/: Cargo.toml
programs/10-sysvar-address-checking/insecure/src/: lib.rs
programs/10-sysvar-address-checking/recommended/: Cargo.toml
programs/10-sysvar-address-checking/recommended/src/: lib.rs
programs/10-sysvar-address-checking/secure/: Cargo.toml
programs/10-sysvar-address-checking/secure/src/: lib.rs
programs/11-arithmetic-operations/insecure/: Anchor.toml
programs/11-arithmetic-operations/insecure/tests/: Cargo.toml
programs/12-reinitialization/insecure/: Anchor.toml
programs/12-reinitialization/insecure/tests/: Cargo.toml
programs/13-realloc/secure/: Anchor.toml
programs/13-realloc/secure/tests/: Cargo.toml
programs/14-transfer/insecure/: Anchor.toml
programs/14-transfer/insecure/tests/: Cargo.toml
programs/15-resend-unique-tx/insecure/: Anchor.toml
programs/15-resend-unique-tx/secure/tests/: Cargo.toml
programs/16-auction_cpi/: Anchor.toml
programs/16-auction_cpi/programs/auction_cpi/: Cargo.toml
programs/16-auction_cpi/tests/: Cargo.toml
programs/16-auction_cpi/tests/src/: test_ixs.rs
programs/2-owner-checks/insecure/: Cargo.toml
programs/2-owner-checks/insecure/src/: lib.rs
programs/2-owner-checks/recommended/: Cargo.toml
programs/2-owner-checks/recommended/src/: lib.rs
programs/2-owner-checks/secure/: Cargo.toml
programs/2-owner-checks/secure/src/: lib.rs
programs/3-type-cosplay/insecure/: Cargo.toml
programs/3-type-cosplay/insecure/src/: lib.rs
programs/3-type-cosplay/recommended/: Cargo.toml
programs/3-type-cosplay/recommended/src/: lib.rs
programs/3-type-cosplay/secure/: Cargo.toml
programs/3-type-cosplay/secure/src/: lib.rs
programs/4-initialization/insecure/: Cargo.toml
programs/4-initialization/insecure/src/: lib.rs
programs/4-initialization/recommended/: Cargo.toml
programs/4-initialization/recommended/src/: lib.rs
programs/4-initialization/secure/: Cargo.toml
programs/4-initialization/secure/src/: lib.rs
programs/5-arbitrary-cpi/insecure/: Cargo.toml
programs/5-arbitrary-cpi/insecure/src/: lib.rs
programs/5-arbitrary-cpi/recommended/: Cargo.toml
programs/5-arbitrary-cpi/recommended/src/: lib.rs
programs/5-arbitrary-cpi/secure/: Cargo.toml
programs/5-arbitrary-cpi/secure/src/: lib.rs
programs/6-duplicate-mutable-accounts/insecure/: Cargo.toml
programs/6-duplicate-mutable-accounts/insecure/src/: lib.rs
programs/6-duplicate-mutable-accounts/recommended/: Cargo.toml
programs/6-duplicate-mutable-accounts/secure/: Cargo.toml
programs/7-bump-seed-canonicalization/insecure/: Cargo.toml
programs/7-bump-seed-canonicalization/insecure/src/: lib.rs
programs/7-bump-seed-canonicalization/recommended/: Cargo.toml
programs/7-bump-seed-canonicalization/secure/: Cargo.toml
programs/8-pda-sharing/insecure/: Cargo.toml
programs/8-pda-sharing/insecure/src/: lib.rs
programs/8-pda-sharing/recommended/: Cargo.toml
programs/8-pda-sharing/secure/: Cargo.toml
programs/9-closing-accounts/insecure/: Cargo.toml
programs/9-closing-accounts/insecure-still/: Cargo.toml
programs/9-closing-accounts/insecure-still-still/: Cargo.toml
programs/9-closing-accounts/insecure-still/src/: lib.rs
programs/9-closing-accounts/recommended/: Cargo.toml
programs/9-closing-accounts/secure/: Cargo.toml
programs/9-closing-accounts/secure/src/: lib.rs
tests/: Cargo.toml
tests/src/: test_ixs.rs
(+32 files in other folders)
